add basic template for jobs bot

--- a/redtech30_job_bot/.env_template
+++ b/redtech30_job_bot/.env_template
@@ -2,7 +2,7 @@ QnAKnowledgebaseId=
 QnAEndpointKey=
 QnAEndpointHostName=
 
-LUIS_APP_ID=
-LUIS_API_KEY=
-LUIS_API_HOST_NAME=
+LuisAppId=
+LuisAPIKey=
+LuisAPIHostName=
 
